--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       background-color: #F2EDDE;
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: 'Clash Display', sans-serif;
       display: flex;
       justify-content: center;
       padding: 40px 0px;
