--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         margin-bottom: -2%!important;
     }
     .edadSize{
-        margin-top : -1.3%;
+        margin-top : -1.5%;
     }
     .nameSize{
         width: auto;
@@ -266,7 +266,7 @@
       ¿Viajas con tu mascota?
     </label>
     <div id="infoMascota" class="hidden">
-      <label for="detallesMascota">Nombre, peso y raza:</label>
+      <label class="bottomLabel" for="detallesMascota">Nombre, peso y raza:</label>
       <textarea id="detallesMascota" name="detallesMascota" rows="2"></textarea>
     </div>
 
