--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <label class="groupCheckBox mb3"><input type="checkbox" id="checkAlergia" name="restriccionAlimenticia[]" value="Alergia alimenticia"> Intolerancia o alergia</label>
     </div>
     <div id="infoAlergia" class="hidden">
-      <label for="detallesAlergia">¿Qué alergia alimentaria tiene?</label>
+      <label class="bottomLabel" for="detallesAlergia">¿Qué alergia alimentaria tiene?</label>
       <textarea id="detallesAlergia" name="detallesAlergia" rows="2"></textarea>
     </div>
 
