--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <label class="groupCheckBox mb3">
       <input type="checkbox" id="checkAcomp" onclick="document.getElementById('grupoAcomp').classList.toggle('hidden', !this.checked)">
-      ¿Irás con acompañantes?
+      ¿Viajaras con acompañantes?
     </label>
 
     <div id="grupoAcomp" class="hidden">
