--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
         const nombreLabel = document.createElement('label');
         nombreLabel.className = 'bottomLabel';
-        nombreLabel.textContent = 'NOMBRE';
+        nombreLabel.textContent = 'NOMBRE DEL ACOMPAÑANTE';
 
         nombreGroup.appendChild(nombreLabel);
         nombreGroup.appendChild(nombreInput);
