--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
     <label class="mb5">Restricciones alimenticias</label>
     <div class="checkbox-group mb3">
-      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen gluten"> Intolerancia al gluten</label>
+      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen gluten"> No consumen gluten</label>
       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen alcohol"> No consumen alcohol</label>
       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegano"> Vegano</label>
       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegetariano"> Vegetariano</label>
