--- a/index.html
+++ b/index.html
@@ -280,23 +280,29 @@
     </div>
 
     <label class="mb5">Motivo del viaje</label>
-    <div class="checkbox-group mb3">
-      <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje[]" value="Ocasión especial"> Ocasión especial</label>
-      <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje[]" value="Vacaciones"> Vacaciones</label>
-      <label class="groupCheckBox mb5"><input type="checkbox" name="motivoViaje[]" value="Bienestar"> Bienestar</label>
-    </div>
+    <!-- NUEVO: Motivo del viaje -->
+    <label for="motivoViaje">Motivo del viaje</label>
+    <select name="motivoViaje" id="motivoViaje" required>
+      <option value="">Selecciona una opción</option>
+      <option value="Ocasión especial">Ocasión especial</option>
+      <option value="Vacaciones">Vacaciones</option>
+      <option value="Bienestar">Bienestar</option>
+    </select>
 
     <label for="origenVisita">Lugar de procedencia</label>
     <input type="text" id="origenVisita" name="origenVisita" placeholder="Ciudad / País">
 
     <label class="mb5">Restricciones alimenticias</label>
-    <div class="checkbox-group mb3">
-      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen gluten"> No consumen gluten</label>
-      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen alcohol"> No consumen alcohol</label>
-      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegano"> Vegano</label>
-      <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegetariano"> Vegetariano</label>
-      <label class="groupCheckBox mb3"><input type="checkbox" id="checkAlergia" name="restriccionAlimenticia[]" value="Alergia alimenticia"> Intolerancia o alergia</label>
-    </div>
+    <!-- NUEVO: Restricciones alimenticias -->
+    <label for="restriccionAlimenticia">Restricciones alimenticias</label>
+    <select name="restriccionAlimenticia" id="restriccionAlimenticia">
+      <option value="">Selecciona una opción</option>
+      <option value="No consumen gluten">No consumen gluten</option>
+      <option value="No consumen alcohol">No consumen alcohol</option>
+      <option value="Vegano">Vegano</option>
+      <option value="Vegetariano">Vegetariano</option>
+      <option value="Alergia alimenticia">Intolerancia o alergia</option>
+    </select>
     <div id="infoAlergia" class="hidden">
       <label class="bottomLabel" for="detallesAlergia">¿Otras alergias alimenticias?</label>
       <textarea id="detallesAlergia" name="detallesAlergia" rows="2"></textarea>
