--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
  
      <label class="mb5">Motivo del viaje</label>
      <div class="checkbox-group mb3">
-       <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje[]" value="Ocasión especial"> Ocasión especial</label>
-       <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje[]" value="Vacaciones"> Vacaciones</label>
-       <label class="groupCheckBox mb5"><input type="checkbox" name="motivoViaje[]" value="Bienestar"> Bienestar</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje" value="Ocasión especial"> Ocasión especial</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="motivoViaje" value="Vacaciones"> Vacaciones</label>
+       <label class="groupCheckBox mb5"><input type="checkbox" name="motivoViaje" value="Bienestar"> Bienestar</label>
      </div>
  
      <label for="origenVisita">Lugar de procedencia</label>
