--- a/index.html
+++ b/index.html
@@ -291,11 +291,11 @@
  
      <label class="mb5">Restricciones alimenticias</label>
      <div class="checkbox-group mb3">
-       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen gluten"> No consumen gluten</label>
-       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="No consumen alcohol"> No consumen alcohol</label>
-       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegano"> Vegano</label>
-       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia[]" value="Vegetariano"> Vegetariano</label>
-       <label class="groupCheckBox mb3"><input type="checkbox" id="checkAlergia" name="restriccionAlimenticia[]" value="Alergia alimenticia"> Intolerancia o alergia</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia" value="No consumen gluten"> No consumen gluten</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia" value="No consumen alcohol"> No consumen alcohol</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia" value="Vegano"> Vegano</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" name="restriccionAlimenticia" value="Vegetariano"> Vegetariano</label>
+       <label class="groupCheckBox mb3"><input type="checkbox" id="checkAlergia" name="restriccionAlimenticia" value="Alergia alimenticia"> Intolerancia o alergia</label>
      </div>
      <div id="infoAlergia" class="hidden">
        <label class="bottomLabel" for="detallesAlergia">¿Otras alergias alimenticias?</label>
